--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 		</div>
 <!-- *************************Word - Translation stage ***********************-->
 		<div class="row w_t_stage">
-			<div class="col-sm-12">
+			<div class="col-sm-2">
+			</div>
+			<div class="col-sm-8">
 				<h2>Please, enter the russian translation of the word:</h2>		
+			</div>
+			<div class="col-sm-2">
 			</div>
 		</div>
 		<div class="row w_t_stage">
@@ -44,8 +48,12 @@
 		</div>		
 <!--**************************** Translation - Word stage ************************-->
 		<div class="row t_w_stage">
-			<div class="col-sm-12">
+			<div class="col-sm-2">
+			</div>
+			<div class="col-sm-8">
 				<h2>Please, enter the german translation of the word:</h2>		
+			</div>
+			<div class="col-sm-2">
 			</div>
 		</div>		
 		<div class="row t_w_stage">
@@ -55,9 +63,9 @@
 		</div>		
 <!-- *************************** Input panel *************************-->
 		<div class="row t_w_stage w_t_stage">
-			<div class="col-sm-2">
+			<div class="col-sm-1">
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-10">
    				 <div class="input-group">
 					<input id="inputForm" type="text" class="form-control wrd" placeholder="Enter the translation of the word" aria-label="input_germ_word">
       					<span class="input-group-btn">
@@ -66,27 +74,27 @@
       					</span>
 			  	 </div>
 			</div>
-			<div class="col-sm-2">
+			<div class="col-sm-1">
 			</div>
 		</div>
 <!-- *****************************Hint & Answer panel ************************-->
 		<br>
 		<div class="row w_t_stage t_w_stage">
-			<div class="col-sm-2">
+			<div class="col-sm-1">
 			</div>
-			<div class="col-sm-4 helpPnl" id="hintButton">
+			<div class="col-sm-5 helpPnl" id="hintButton">
 				<button type="button" class="btn btn-light helpBtn" onclick="changeViewHelp('hint')">Hint in English</button>
 			</div>
-			<div class="col-sm-4 helpPnl2" id="hintButton2">
+			<div class="col-sm-5 helpPnl2" id="hintButton2">
 				<button type="button" id="english" class="btn btn-warning helpBtn" onclick="changeViewHelp('hint')">Hint in English2</button>
 			</div>
-			<div class="col-sm-4 helpPnl" id="answerButton">
+			<div class="col-sm-5 helpPnl" id="answerButton">
 				<button type="button" class="btn btn-light helpBtn" onclick="changeViewHelp('answer')">Right answer</button>
 			</div>
-			<div class="col-sm-4 helpPnl2" id="answerButton2">
+			<div class="col-sm-5 helpPnl2" id="answerButton2">
 				<button type="button" id="undefLang" class="btn btn-warning helpBtn" onclick="changeViewHelp('answer')">Right answer2</button>
 			</div>
-			<div class="col-sm-2">
+			<div class="col-sm-1">
 			</div>
 		</div>
 <!--***************************** Sripts *************************************-->
