--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<div class="col-sm-12 mainer"><a href="./index.html"><h1 class="title">Deutschlerner</h1></a></div>
 		</div>
 		<div class="row frstStage">
+		<br>
+		<br>
 			<div class="col-sm-12 frstStage"><h2>Which training do you prefer?</h2></div>
 		</div>
 <!--******************************** Embark ************************************-->
@@ -62,6 +64,7 @@
 			</div>
 		</div>		
 <!-- *************************** Input panel *************************-->
+		<br>
 		<div class="row t_w_stage w_t_stage">
 			<div class="col-sm-1">
 			</div>
@@ -93,6 +96,24 @@
 			</div>
 			<div class="col-sm-5 helpPnl2" id="answerButton2">
 				<button type="button" id="undefLang" class="btn btn-warning helpBtn" onclick="changeViewHelp('answer')">Right answer2</button>
+			</div>
+			<div class="col-sm-1">
+			</div>
+		</div>
+		<div class="row w_t_stage t_w_stage">
+			<div class="col-sm-1">
+			</div>
+			<div class="col-sm-5 helpPnl" id="hintButton">
+				<span class="hotKeyHelp">Ctrl+Shift+1</span>
+			</div>
+			<div class="col-sm-5 helpPnl2" id="hintButton2">
+				<span class="hotKeyHelp">Ctrl+Shift+1</span>
+			</div>
+			<div class="col-sm-5 helpPnl" id="answerButton">
+				<span class="hotKeyHelp">Ctrl+Shift+2</span>
+			</div>
+			<div class="col-sm-5 helpPnl2" id="answerButton2">
+				<span class="hotKeyHelp">Ctrl+Shift+2</span>
 			</div>
 			<div class="col-sm-1">
 			</div>
