Limited quantity of training to 20 times

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 			</div>
 			<div class="col-sm-10">
    				 <div class="input-group">
+					<span class="input-group-addon" id="basic-addon1"><span id="counter">1</span>&nbsp;из 20</span>
 					<input id="inputForm" type="text" class="form-control wrd" placeholder="Enter the translation of the word" aria-label="input_germ_word">
       					<span class="input-group-btn">
         					<button class="btn btn-light" id="yoButton" type="button" onclick="wordIterator(1)">Yo!</button>
@@ -117,6 +118,9 @@
 			</div>
 			<div class="col-sm-1">
 			</div>
+		</div>
+		<div class="row w_t_stage t_w_stage">
+			<p id="counter"></p>
 		</div>
 <!--***************************** Sripts *************************************-->
 	<script src="js/main.js"></script>
