--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>Deutschelerner 0.0.1</title>
-	<link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu" rel="stylesheet">
+	<!--Bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">	
+	<!--Fonts-->
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<!-- Favicons -->
+    <link rel="icon" type="image/png" href="DeutschLerner_favicon.png" sizes="16x16 32x32 96x96"> 
 
 </head>
 
