--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<!-- Favicons -->
-    <link rel="icon" type="image/png" href="DeutschLerner_favicon.png" sizes="16x16 32x32 96x96"> 
+    <link rel="icon" type="image/png" href="DeutschLerner_favicon3.png" sizes="16x16 32x32 96x96"> 
 
 </head>
 
