Hot keys starscreen added

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 			</div>
 			<div class="col-sm-5">
 				<button type="button" onclick="wrdTrans()" class="btn btn-primary frstStage"><h3>Word - Translation</h3></button>	
+				<span class="hotKey frstStage">Key 1</span>
 			</div>
 			<div class="col-sm-5">
 				<button type="button" onclick="transWrd()" class="btn btn-primary frstStage"><h3>Translation - Word</h3></button>	
+				<span class="hotKey frstStage">Key 2</span>
 			</div>
 			<div class="col-sm-1">
 			</div>
@@ -109,16 +111,16 @@
 			<div class="col-sm-1">
 			</div>
 			<div class="col-sm-5 helpPnl" id="hintButton">
-				<span class="hotKeyHelp">Ctrl+Shift+1</span>
+				<span class="hotKey">Ctrl+Shift+1</span>
 			</div>
 			<div class="col-sm-5 helpPnl2" id="hintButton2">
-				<span class="hotKeyHelp">Ctrl+Shift+1</span>
+				<span class="hotKey">Ctrl+Shift+1</span>
 			</div>
 			<div class="col-sm-5 helpPnl" id="answerButton">
-				<span class="hotKeyHelp">Ctrl+Shift+2</span>
+				<span class="hotKey">Ctrl+Shift+2</span>
 			</div>
 			<div class="col-sm-5 helpPnl2" id="answerButton2">
-				<span class="hotKeyHelp">Ctrl+Shift+2</span>
+				<span class="hotKey">Ctrl+Shift+2</span>
 			</div>
 			<div class="col-sm-1">
 			</div>
