Changed position of hotkey hint on primary buttons

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 			</div>
 			<div class="col-sm-5">
 				<button type="button" onclick="wrdTrans()" class="btn btn-primary frstStage"><h3>Word - Translation</h3></button>	
-				<span class="hotKey frstStage">Key 1</span>
+				<br><span class="hotKey frstStage">1</span>
 			</div>
 			<div class="col-sm-5">
 				<button type="button" onclick="transWrd()" class="btn btn-primary frstStage"><h3>Translation - Word</h3></button>	
-				<span class="hotKey frstStage">Key 2</span>
+				<br><span class="hotKey frstStage">2</span>
 			</div>
 			<div class="col-sm-1">
 			</div>
