Fixed title 'Something is wrong'

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</div>
 		<div class="row w_t_stage">
 			<div class="col-sm-12">
-				<h2 class="wrd" id="german">Something is wrong</h2>		
+				<h2 class="wrd" id="german">Processing.....</h2>		
 			</div>
 		</div>		
 <!--**************************** Translation - Word stage ************************-->
@@ -66,7 +66,7 @@
 		</div>		
 		<div class="row t_w_stage">
 			<div class="col-sm-12">
-				<h3 class="wrd" id="russian">Что то не так</h3>		
+				<h3 class="wrd" id="russian">Processing.....</h3>		
 			</div>
 		</div>		
 <!-- *************************** Input panel *************************-->
