Hotkey's bag fix

--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 			<div class="col-sm-1">
 			</div>
 			<div class="col-sm-5 helpPnl" id="hintButton">
-				<span class="hotKey">Space+1</span>
+				<span class="hotKey">Alt+Shift+1</span>
 			</div>
 			<div class="col-sm-5 helpPnl2" id="hintButton2">
-				<span class="hotKey">Space+1</span>
+				<span class="hotKey">Alt+Shift+1</span>
 			</div>
 			<div class="col-sm-5 helpPnl" id="answerButton">
-				<span class="hotKey">Space+2</span>
+				<span class="hotKey">Alt+Shift+2</span>
 			</div>
 			<div class="col-sm-5 helpPnl2" id="answerButton2">
-				<span class="hotKey">Space+2</span>
+				<span class="hotKey">Alt+Shift+2</span>
 			</div>
 			<div class="col-sm-1">
 			</div>
